(fix): Adjust bio-title(fade) on mobile

--- a/scss/_components/_bio.scss
+++ b/scss/_components/_bio.scss
@@ -72,6 +72,9 @@
     @extend .bio__title;
     animation-name: color-shift;
     display: none;
+    @include media('<340px') {
+      font-size: 26px;
+    }
   }
 
   & .bio__tagline {
